# boilercv

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .renovaterc.json  .taplo.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dev.ps1  Invoke-Just.ps1  Invoke-Uv.ps1  README.md  _dev.ps1  dev.ps1  dvc.yaml  dvc2.yaml  frozen_requirements.txt  iuv.ps1  justfile  lock-high.json  lock.json  params.yaml  pyproject.toml  requirements.txt
pipeline/: pyproject.toml
pipeline/boilercv_pipeline/: __init__.py  __main__.py  annotations.py  cli.py  config.py  dfs.py  mappings.py  morphs.py  nbs.py  plotting.py  preview.py  sets.py  settings.py  types.py  units.py  video.py
pipeline/boilercv_pipeline/captivate/: captures.py  previews.py
pipeline/boilercv_pipeline/cli/: __init__.py  sync_dvc.py  types.py
pipeline/boilercv_pipeline/context/: __init__.py  types.py
pipeline/boilercv_pipeline/contexts/: __init__.py  types.py
pipeline/boilercv_pipeline/correlations/: __init__.py  annotations.py  models.py  pipes.py  types.py
pipeline/boilercv_pipeline/correlations/dimensionless_bubble_diameter/: __init__.py  equations.py  equations.toml  expectations.toml  morphs.py  solutions.toml  types.py  update_expectations.py
pipeline/boilercv_pipeline/correlations/types/: __init__.py  runtime.py
pipeline/boilercv_pipeline/equations/: __init__.py  convert_latex_to_sympy.py  convert_pngs_to_latex.py  convert_sympy_to_python.py  extract_coefficients.py  get_png_equations.py  get_ranges.py  make_docs.py  make_meta.py  make_ranges.py  solve.py  types.py  update_expectations.py
pipeline/boilercv_pipeline/examples/: __init__.py  contours.py  detect_surface.py  fill.py
pipeline/boilercv_pipeline/examples/blobs/: galaxy.py
pipeline/boilercv_pipeline/examples/large/: __init__.py  convert.py
pipeline/boilercv_pipeline/examples/previews/: binarized_composite.py  gray_composite.py  multicolor_composite.py  triple_composite.py
pipeline/boilercv_pipeline/experiments/e230920_subcool/: __init__.py  __main__.py  find_contours.py  find_objects.py  find_tracks.py  get_mae.py  merge_mae.py  merge_tracks.py  process_tracks.py
pipeline/boilercv_pipeline/experiments/e240215_plotting/: __init__.py
pipeline/boilercv_pipeline/manual/: binarize.py  convert.py  flatten_data_dir.py
pipeline/boilercv_pipeline/manual/flatten_data_dir/: __init__.py  __main__.py
pipeline/boilercv_pipeline/mappings/: __init__.py  models.py  types.py
pipeline/boilercv_pipeline/models/: __init__.py  column.py  columns.py  config.py  deps.py  df.py  dvc.py  notebooks.py  params.py  paths.py  stage.py  stages.py  subcool.py  types.py  unit.py  video.py
pipeline/boilercv_pipeline/models/column/: __init__.py  types.py
pipeline/boilercv_pipeline/models/contexts/: __init__.py  types.py
pipeline/boilercv_pipeline/models/data/: __init__.py  types.py
pipeline/boilercv_pipeline/models/params/: __init__.py  types.py
pipeline/boilercv_pipeline/models/path/: __init__.py  types.py
pipeline/boilercv_pipeline/models/paths/: __init__.py  types.py
pipeline/boilercv_pipeline/models/stage/: __init__.py  types.py
pipeline/boilercv_pipeline/models/stages/: __init__.py  types.py
pipeline/boilercv_pipeline/models/subcool/: __init__.py  types.py
pipeline/boilercv_pipeline/models/types/: __init__.py  runtime.py
pipeline/boilercv_pipeline/previews/: __init__.py  __main__.py  binarized.py  composite.py  filled.py  gray.py
pipeline/boilercv_pipeline/root_contexts/: __init__.py  types.py
pipeline/boilercv_pipeline/stages/: binarize.py  compare_theory.py  convert.py  e230920_find_contours.py  e230920_find_objects.py  e230920_find_tracks.py  e230920_get_mae.py  e230920_merge_mae.py  e230920_merge_tracks.py  e230920_plot_tracks.py  e230920_process_tracks.py  e230920_update_thermal_data.py  fill.py  find_contours.py  find_tracks.py  find_unobstructed.py  flatten_data_dir.py  preview_binarized.py  preview_filled.py  preview_gray.py
pipeline/boilercv_pipeline/stages/binarize/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/common/: __init__.py  contours.py
pipeline/boilercv_pipeline/stages/convert/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_find_contours/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_find_objects/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_find_tracks/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_get_mae/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_get_thermal_data/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_merge_mae/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_merge_tracks/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_plot_tracks/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_process_tracks/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/e230920_update_thermal_data/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/fill/: __init__.py  __main__.py
pipeline/boilercv_pipeline/stages/find_contours/: __init__.py  (+1 more)
pipeline/boilercv_pipeline/types/: __init__.py  runtime.py
requirements/: binder.in  binder_constraints.in  binder_overrides.txt  binder_uv.toml  dev.in  nodeps.in  override.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_low.txt  requirements_high.txt  requirements_low.txt  requirements_prod.txt  uv.in
tests/: conftest.py  pyproject.toml  test_e230920_subcool.py  test_morphs.py  test_subcool.py
tests/boilercv_tests/: __init__.py  config.py  conftest.py  settings.py  test_boilercv.py  test_context_validators_serializers.py  test_e230920_subcool.py  test_morphs.py
tests/boilercv_tests/test_correlations/: __init__.py  test_beta.py  test_dimensionless_bubble_diameter.py
tests/boilercv_tests/test_equations/: test_dimensionless_bubble_diameter.py
tests/data/: .gitignore
tests/root-docs/: params.yaml
tests/test_correlations/: test_beta.py
(+231 files in other folders)
