[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_pipeline"
version = "0.0.0"
description = "Data pipeline."
dependencies = [
    # TODO: Swap with `pims`
    "boilercine @ git+https://github.com/blakeNaccarato/boilercine@046ee0146394bebf5693fe0c18bbcea3d3e64fe5",
    "cmasher>=1.7.2",
    "colorcet>=3.0.1",
    "copykitten>=1.1.1",
    "cyclopts>=2.6.1",
    "imageio[pyav]>=2.34.1",
    "loguru>=0.7.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "pandas[hdf5,performance]>=2.2.2",
    "pillow>=10.3.0",
    "ploomber-engine>=0.0.30",
    "pyarrow>=14.0.1",
    "pydantic>=2.7.1",
    "pyqtgraph>=0.13.3",
    "ruamel.yaml>=0.17.32",
    "scikit-image>=0.21.0",
    "scipy>=1.11.1",
    "seaborn>=0.13.2",
    "sparklines>=0.4.2",
    "stopit>=1.1.2",
    "sympy>=1.12",
    "tomlkit>=0.12.4",
    "tqdm>=4.66.3",
    "watchfiles>=0.22.0",
    "xarray[accel,io,parallel]>=2023.7.0",
]
[project.optional-dependencies]
# * Minimal CV flavor needed, but allow `boilercv` to coexist with different flavors
cv = ["opencv-python-headless>=4.9.0.80"]
[tool.fawltydeps]
deps = ["pipeline/pyproject.toml"]
code = ["pipeline/boilercv_pipeline"]
ignore_undeclared = ["boilercore", "boilercv", "PySide6"]
ignore_unused = [
    "pyarrow", # Used in `boilercv_pipeline.__init__`
]
