[tool.uv]
dev-dependencies = [
  "debugpy==1.8.2",
  "dvc[gs]==3.51.2",
  "fawltydeps==0.16.0",
  "pandas-stubs~=2.2.2",
  "pipdeptree==2.23.0",
  "pre-commit==3.7.1",
  "pyright==1.1.371",
  "pyside6==6.7.2",
  "ruff==0.5.1",
  "snakeviz==2.2.0",
  "sourcery==1.21.0",
  "towncrier==23.11.0",
]
override-dependencies = [
  "boilercore @ file:///${PROJECT_ROOT}/../submodules/boilercore",
  "cachier @ file:///${PROJECT_ROOT}/../submodules/cachier",
]
[project]
name = "boilercv_project"
version = "0"
requires-python = ">=3.11"
dependencies = [
  "boilercv[cv] @ file:///${PROJECT_ROOT}/..",
  "boilercv_docs @ file:///${PROJECT_ROOT}/../docs",
  "boilercv_pipeline @ file:///${PROJECT_ROOT}/../pipeline",
  "boilercv_tests @ file:///${PROJECT_ROOT}/../tests",
  "boilercv_tools @ file:///${PROJECT_ROOT}/../scripts",
  "boilercine @ file:///${PROJECT_ROOT}/../submodules/boilercine",
  "boilercore @ file:///${PROJECT_ROOT}/../submodules/boilercore",
  "cachier @ file:///${PROJECT_ROOT}/../submodules/cachier",
  "context_models @ file:///${PROJECT_ROOT}/../submodules/context_models",
  "pycine @ git+https://github.com/ottomatic-io/pycine@815cfca06cafc50745a43b2cd0168982225c6dca",
]
