[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "boilercv_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    # ? Core testing
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest==8.0.0",
    # ? Other testing
    "pytest-harvest==1.10.4",
    "pytest-plt==1.1.1",
    "pytest-xdist[psutil,setproctitle]==3.5.0",
    # ? Other deps
    "cachier @ git+https://github.com/blakeNaccarato/cachier@0892f53dc8fd9fb8a7f959305a1a9ec692876dc0", # Allows `dill` caching
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "pandas[hdf5,performance]>=2.2.2",
    "pydantic>=2.7.1",
    "seaborn>=0.13.2",
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/boilercv_tests"]
ignore_undeclared = [
    "boilercore",
    "boilercv_docs",
    "boilercv_pipeline",
    "boilercv_tests",
    "boilercv_tools",
    "boilercv",
]
ignore_unused = [
    # ? Core testing tools or plugins
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-github-actions-annotate-failures",
    "pytest-plt",
    "pytest-xdist",
]
