[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilercv_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    # ? Core testing
    "pytest-cov==5.0.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest==8.2.2",
    # ? Other testing
    "pytest-harvest==1.10.4",
    "pytest-plt==1.1.1",
    "pytest-xdist[psutil,setproctitle]==3.5.0",
    # ? Other deps
    "cachier>=3.0.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.4",
    "pandas[hdf5,performance]>=2.2.2",
    "pydantic>=2.7.1",
    "seaborn>=0.13.2",
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/boilercv_tests"]
ignore_undeclared = ["boilercore", "boilercv"]
ignore_unused = [
    # ? Core testing tools or plugins
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-github-actions-annotate-failures",
    "pytest-plt",
    "pytest-xdist",
]
